(initial config:) type checking strict disabled, dockerfile for server app and server-db connection configured

--- a/packages/server/.env
+++ b/packages/server/.env
@@ -1,1 +1,9 @@
 GITHUB_API=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
+
+PGDATABASE=testdb
+PGUSER=admin
+PGPASSWORD=admin
+PGHOST=postgres-db
+PGPORT=5432
+
+
