--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,31 +1,41 @@
 version: '3.8'
+
 services:
-  db:
-    container_name: postgres_container
-    image: postgres
+  server:
+    container_name: server
+    build:
+      context: .
+      dockerfile: docker.dockerfile
+      args:
+        - BUILD_CONTEXT=server
+    ports:
+      - '3333:3333'
+    networks:
+      - back-tier
+    depends_on:
+      - postgres-db
     restart: always
+
+  postgres-db:
+    expose:
+      - 5432
+    restart: always
+    env_file: .env
+    volumes:
+      - pgReportData:/var/lib/postgresql/data
     environment:
-      POSTGRES_DB: postgres_db
       POSTGRES_USER: admin
-      POSTGRES_PASSWORD: secret
-      PGDATA: /var/lib/postgresql/data
-    ports:
-      - "5432:5432"
-    volumes:
-      - db-data:/var/lib/postgresql/data
-  
-  pgadmin:
-    container_name: pgadmin4_container
-    image: dpage/pgadmin4:5.5
-    restart: always
-    environment:
-      PGADMIN_DEFAULT_EMAIL: admin@admin.com
-      PGADMIN_DEFAULT_PASSWORD: secret
-      PGADMIN_LISTEN_PORT: 80
-    ports:
-      - "8080:80"
-    volumes:
-      - pgadmin-data:/var/lib/pgadmin
+      POSTGRES_PASSWORD: admin
+      POSTGRES_DB: testdb
+    container_name: postgres-db
+    image: postgres:10
+    networks:
+      - back-tier
+
 volumes:
-  db-data:
-  pgadmin-data:
+  pgReportData:
+    driver: local
+  node_modules:
+
+networks:
+  back-tier:
