--- a/package.json
+++ b/package.json
@@ -12,12 +12,15 @@
   "scripts": {
     "server-dev": "yarn workspace server dev",
     "web-dev": "yarn workspace web start",
+    "build:server": "yarn workspace server install",
     "start": "run-p server-dev web-dev"
   },
   "devDependencies": {
     "npm-run-all": "^4.1.5"
   },
   "dependencies": {
-    "dotenv": "^14.3.2"
+    "dotenv": "^14.3.2",
+    "pg": "^8.7.1",
+    "typeorm": "^0.2.41"
   }
 }
