--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -10,10 +10,12 @@
     "typescript": "^4.5.5"
   },
   "dependencies": {
+    "@types/sequelize": "^4.28.11",
     "express": "^4.17.2",
-    "nodemon": "^2.0.15"
+    "nodemon": "^2.0.15",
+    "sequelize": "^6.15.0"
   },
   "scripts": {
-    "dev": "nodemon src/server.ts"
+    "dev": "nodemon -L src/server.ts"
   }
 }
