--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -1,7 +1,7 @@
 {
   "name": "server",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "src/server.ts",
   "license": "MIT",
   "devDependencies": {
     "@types/express": "^4.17.13",
@@ -12,10 +12,11 @@
   "dependencies": {
     "@types/sequelize": "^4.28.11",
     "express": "^4.17.2",
+    "knex": "^1.0.1",
     "nodemon": "^2.0.15",
     "sequelize": "^6.15.0"
   },
   "scripts": {
-    "dev": "nodemon -L src/server.ts"
+    "dev": "nodemon --legacy-watch src/server.ts"
   }
 }
