--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,7 +17,22 @@ services:
     working_dir: /usr/local/src/
     volumes:
       - .:/usr/local/src/
-
+  web:
+    container_name: web
+    build:
+      context: .
+      dockerfile: docker.dockerfile
+      args:
+        - BUILD_CONTEXT=web
+    ports:
+      - '3000:3000'
+    networks:
+      - back-tier
+    depends_on:
+      - postgres-db
+    working_dir: /usr/local/src/
+    volumes:
+      - .:/usr/local/src/
   postgres-db:
     expose:
       - 5432
