--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "server-dev": "yarn workspace server dev",
     "web-dev": "yarn workspace web start",
     "build:server": "yarn workspace server install",
-    "start": "run-p server-dev"
+    "build:web": "yarn workspace web install",
+    "start": "run-p server-dev web-dev"
   },
   "devDependencies": {
     "npm-run-all": "^4.1.5"
