--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "dependencies": {
     "dotenv": "^14.3.2",
+    "node-pg-migrate": "^6.2.1",
     "pg": "^8.7.1",
     "typeorm": "^0.2.41"
   }
