--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -2,7 +2,12 @@
   "name": "web",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:3333/",
   "dependencies": {
+    "@emotion/react": "^11.7.1",
+    "@emotion/styled": "^11.6.0",
+    "@mui/material": "^5.4.0",
+    "@mui/x-data-grid": "^5.5.0",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
@@ -13,8 +18,16 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.0",
+    "styled-components": "^5.3.1",
     "typescript": "^4.5.5",
     "web-vitals": "^2.1.4"
+  },
+  "devDependencies": {
+    "@mui/styled-engine": "npm:@mui/styled-engine-sc@latest",
+    "@types/styled-components": "^5.1.14"
+  },
+  "resolutions": {
+    "@mui/styled-engine": "npm:@mui/styled-engine-sc@latest"
   },
   "scripts": {
     "start": "react-scripts start",
